fixed overflow of display

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   display: flex;
 
   flex-direction: column;
-
+  width: 360px;
   border-radius: 10px;
   padding: 20px;
 }
@@ -31,6 +31,7 @@ body {
   display: flex;
   align-items: center;
   font-size: 40px;
+  overflow: hidden;
 }
 button:hover {
   background-color: rgba(255, 255, 255, 0.9);
@@ -54,15 +55,27 @@ button {
   background-color: #ffb74d; /* Lighter gray background on hover */
 }
 @keyframes flash {
-  0% { background-color: rgba(255, 255, 255, 0.5); }
-  50% { background-color: rgba(255, 255, 255, 0.9); }
-  100% { background-color: rgba(255, 255, 255, 0.5); }
+  0% {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  50% {
+    background-color: rgba(255, 255, 255, 0.9);
+  }
+  100% {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
 }
 
 @keyframes opFlash {
-  0% { background-color: #ffb74d; }
-  50% { background-color: #ff9800; }
-  100% { background-color: #ffb74d; }
+  0% {
+    background-color: #ffb74d;
+  }
+  50% {
+    background-color: #ff9800;
+  }
+  100% {
+    background-color: #ffb74d;
+  }
 }
 
 button:active {
